Fix after-touch color of links on mobile

--- a/main.css
+++ b/main.css
@@ -151,4 +151,9 @@ code {
     .main-section h2 {
         font-size: 1.7em;
     }
+
+
+    .nav-link:hover {
+        background-color: rgb(54, 54, 54);
+    }
 }
